--- a/assets/sass/components/_icon.scss
+++ b/assets/sass/components/_icon.scss
@@ -31,6 +31,12 @@
 			}
 		}
 
+		&.arrows {
+			&:before {
+				font-family: 'Font Awesome 5 Arrows';
+			}
+		}
+
 		&.major {
 			width: 2.5em;
 			height: 2.5em;
