Added ACM description to experience and deleted the php file.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3177,6 +3177,7 @@ input, select, textarea {
 
 				.spotlights > section > .logo-wrapper{
 					text-align: center;
+					margin-left: 0%;
 				}
 
 				.spotlights > section > .logo-wrapper > .logo{
